--- a/agents-docs/content/docs/get-started/push-pull.mdx
+++ b/agents-docs/content/docs/get-started/push-pull.mdx
@@ -52,7 +52,7 @@ inkeep push
 
 ### Step 5: Chat with your agent
 
-Refresh http://localhost:3000, switch to the Docs Assistant project, navigate to the Docs Assistant agent, click "Try It", and ask a question about Inkeep.
+Refresh http://localhost:3000, switch to the Docs Assistant project, navigate to the Docs Assistant agent, click **Try it**, and ask a question about Inkeep.
 
 <img src="/gifs/docs-assistant.gif" alt="Chat with your agent" width="100%" style={{ borderRadius: "10px" }} />
 
