--- a/agents-docs/content/docs/get-started/quick-start.mdx
+++ b/agents-docs/content/docs/get-started/quick-start.mdx
@@ -44,16 +44,16 @@ The Visual Builder automatically opens at http://localhost:3000.
 
 ### Step 3: Chat with your agent
 
-Navigate to the Event Planner agent at http://localhost:3000, click "Try It", and ask about fun activities at a location of your choice.
+Navigate to the Event Planner agent at http://localhost:3000, click **Try it**, and ask about fun activities at a location of your choice.
 
 <img src="/gifs/event-planner.gif" alt="Chat with your agent" width="100%" style={{ borderRadius: "10px" }} />
 
 ### Next steps
 
-Next, we recommend using `inkeep push` and `inkeep pull` to push your code to the no-code Visual Builder and pull the Visual Builder back to your code. See [Push / Pull](/get-started/push-pull) to get started.
+Next, we recommend learning about `inkeep push` and `inkeep pull` so you can go from `SDK -> Visual Builder` and `Visual Builder -> SDK`. See the [Push / Pull](/get-started/push-pull) guide for a quick example.
 
 <Cards>
   <Card title="Push / Pull" icon="LuArrowLeftRight" href="/get-started/push-pull">
-    Push and pull your agents to and from the Visual Builder
+    Use our cookbook to learn about push and pull.
   </Card>
 </Cards>
