--- a/agents-docs/content/docs/visual-builder/headers.mdx
+++ b/agents-docs/content/docs/visual-builder/headers.mdx
@@ -43,7 +43,7 @@ You can generate custom schemas using this [JSON Schema generator](https://trans
 
 ## Sending Custom Headers
 
-1. On your agent page, click on the "Try it" button in the top right corner.
+1. On your agent page, click on the **Try it** button in the top right corner.
 2. Click on the "Custom headers" button in the top right corner.
 3. Enter the custom headers in JSON format.
 4. Click on the "Apply" button.
