--- a/agents-docs/content/docs/visual-builder/sub-agents.mdx
+++ b/agents-docs/content/docs/visual-builder/sub-agents.mdx
@@ -47,7 +47,7 @@ Configure its name and prompt, then click **Save**.
 
 To try the Agent, ensure it has at least one Sub Agent, then save the Agent by clicking the "Save changes" button in the top right corner.
 
-Then, click the "Try it" button in the top right corner and type into the chat input.
+Then, click the **Try it** button in the top right corner and type into the chat input.
 
 <Video src="/videos/try-an-agent.mp4" />
 
