--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -5,11 +5,11 @@ icon: "LuBookOpen"
 description: Inkeep is a platform for building Agent-driven AI Chat Assistants and AI Workflows.
 ---
 
-With Inkeep, you can build and ship AI Agents with a **No-Code Visual Builder** or **TypeScript SDK**. Agents can be edited in code or no-code with **full 2-way sync**, so technical and non-technical teams can create and manage the same Agents in one platform.
+With Inkeep, you can build and ship AI Agents with a **No-Code Visual Builder** or **TypeScript SDK**. Agents can be edited in code or no-code with **full 2-way sync**, so technical and non-technical teams can create and manage their Agents in a single platform.
 
 ## Agentic Chat Assistants
 Inkeep Agents can operate as conversational assistants, for example:
-- a customer experience agent for customer support, technical docs, or in-app copilot
+- a customer experience agent for help centers, technical docs, or in-app experiences
 - an internal copilot to assist your support, sales, marketing, ops, and other teams
 
 ## Agentic Workflows
@@ -21,7 +21,7 @@ Agents can also be used for workflow automation like:
 
 ### No-Code Visual Builder
 
-A no-code drag-and-drop canvas designed to allow any team to create and manage teams of Agents visually.
+A no-code canvas designed to allow any team to create and manage teams of Agents with a drag-and-drop experience.
 
 <img
   src="/gifs/drag-n-drop.gif"
@@ -32,7 +32,7 @@ A no-code drag-and-drop canvas designed to allow any team to create and manage t
 
 ### TypeScript Agents SDK
 
-A code-first approach for building and managing teams of Agents. The SDK allows engineering teams to build with the tools and developer experience they expect.
+A code-first approach for building and managing multi-agent systems. Engineering teams to build with the tools and developer experience they expect.
 
    ```typescript
    import { agent, subAgent } from "@inkeep/agents-sdk";
@@ -46,7 +46,7 @@ A code-first approach for building and managing teams of Agents. The SDK allows 
 
    export const basicAgent = agent({
      id: "basic-agent",
-     name: "Basic Agent Example",
+     name: "Basic Agent",
      description: "A basic agent that just says hello",
      defaultSubAgent: helloAgent,
      subAgents: () => [helloAgent],
@@ -58,13 +58,13 @@ The **Visual Builder and TypeScript SDK are fully interoperable**: your technica
 ## Platform Overview
 
 **Inkeep Open Source** includes:
-- A Visual Builder & TypeScript SDK with full 2-way sync
-- Multi-agent design so agents can collaborate on tasks
-- MCP Tools with credential & permissions management
-- A UI component library for dynamic AI chat experiences
-- Triggering Agents with MCP, A2A, & Vercel SDK APIs
+- A Visual Builder & TypeScript SDK with 2-way sync
+- Multi-agent architecture to support teams of agents
+- MCP Tools with credentials management
+- A UI component library for dynamic chat experiences
+- Triggering Agents via MCP, A2A, & Vercel SDK APIs
 - Observability via a Traces UI & OpenTelemetry
-- Easy deployment to Vercel and Docker
+- Easy deployment to Vercel and using Docker
 
 If you'd like a managed platform, check out the [Inkeep Cloud Waitlist](https://inkeep.com/cloud-waitlist) or [Inkeep Enterprise](https://inkeep.com/enterprise).
 
