--- a/agents-docs/content/docs/self-hosting/vercel.mdx
+++ b/agents-docs/content/docs/self-hosting/vercel.mdx
@@ -117,36 +117,32 @@ Required environment variables for Manage UI:
 ```
 ENVIRONMENT=production
 
-INKEEP_AGENTS_MANAGE_API_URL=
-PUBLIC_INKEEP_AGENTS_MANAGE_API_URL=
 PUBLIC_INKEEP_AGENTS_RUN_API_URL=
-
-INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET=
 PUBLIC_INKEEP_AGENTS_RUN_API_BYPASS_SECRET=
 
-SIGNOZ_URL=https://<your-organization>.signoz.cloud
-PUBLIC_SIGNOZ_URL=
+PUBLIC_INKEEP_AGENTS_MANAGE_API_URL=
+INKEEP_AGENTS_MANAGE_API_URL=
+INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET=
+
+PUBLIC_SIGNOZ_URL=https://<your-organization>.signoz.cloud
 SIGNOZ_API_KEY=
 
+PUBLIC_NANGO_SERVER_URL=https://api.nango.dev
+PUBLIC_NANGO_CONNECT_BASE_URL=https://connect.nango.dev
 NANGO_SECRET_KEY=
-NANGO_SERVER_URL=https://api.nango.dev
-PUBLIC_NANGO_SERVER_URL
-PUBLIC_NANGO_CONNECT_BASE_URL
 ```
 
 | Environment Variable                         | Value                                                                                                                                                                                          |
 | -------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | `ENVIRONMENT`                                | `production`                                                                                                                                                                                   |
-| `INKEEP_AGENTS_MANAGE_API_URL`               | Your Vercel deployment URL for Manage API                                                                                                                                                      |
-| `PUBLIC_INKEEP_AGENTS_MANAGE_API_URL`        | Your Vercel deployment URL for Manage API                                                                                                                                                      |
-| `PUBLIC_INKEEP_AGENTS_RUN_API_URL`           | Your Vercel deployment URL for Manage API                                                                                                                                                      |
-| `INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET`     | Your generated Manage API bypass secret from Step 5                                                                                                                                            |
+| `PUBLIC_INKEEP_AGENTS_RUN_API_URL`           | Your Vercel deployment URL for Run API                                                                                                                                                         |
 | `PUBLIC_INKEEP_AGENTS_RUN_API_BYPASS_SECRET` | Your generated Run API bypass secret from Step 6                                                                                                                                               |
-| `SIGNOZ_URL`                                 | Use the instructions from [SigNoz Cloud Setup](/quick-start/traces#option-1-signoz-cloud-setup) to configure your SigNoz URL. Note: Local SigNoz setup won't work with Vercel deployments.     |
+| `PUBLIC_INKEEP_AGENTS_MANAGE_API_URL`        | Your Vercel deployment URL for Manage API (skip if same as `INKEEP_AGENTS_MANAGE_API_URL`)                                                                                                                                                   |
+| `INKEEP_AGENTS_MANAGE_API_URL`               | Your Vercel deployment URL for Manage API                                                                                                                                                    |
+| `INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET`     | Your generated Manage API bypass secret from Step 5                                                                                                                                            |
 | `PUBLIC_SIGNOZ_URL`                          | Use the instructions from [SigNoz Cloud Setup](/quick-start/traces#option-1-signoz-cloud-setup) to configure your SigNoz URL. Note: Local SigNoz setup won't work with Vercel deployments.     |
 | `SIGNOZ_API_KEY`                             | Use the instructions from [SigNoz Cloud Setup](/quick-start/traces#option-1-signoz-cloud-setup) to configure your SigNoz API key. Note: Local SigNoz setup won't work with Vercel deployments. |
 | `NANGO_SECRET_KEY`                           | Nango secret key from your [Nango cloud account](/quick-start/credentials#option-1-nango-cloud-setup). Note: Local Nango setup won't work with Vercel deployments.                             |
-| `NANGO_SERVER_URL`                           | `https://api.nango.dev`                                                                                                                                                                        |
 | `PUBLIC_NANGO_SERVER_URL`                    | `https://api.nango.dev`                                                                                                                                                                        |
 | `PUBLIC_NANGO_CONNECT_BASE_URL`              | `https://connect.nango.dev`                                                                                                                                                                    |
 
@@ -161,7 +157,6 @@ To prevent anyone from being able to access the UI, we recommend enabling Vercel
 ```
 INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET=
 INKEEP_AGENTS_RUN_API_BYPASS_SECRET=
-PUBLIC_INKEEP_AGENTS_RUN_API_BYPASS_SECRET=
 ```
 
 ### Step 2: Create a cloud configuration file
@@ -236,9 +231,9 @@ export const sandboxConfig = isProduction
         runtime: "node22", // or 'typescript'
         timeout: 60000, // 60 second timeout
         vcpus: 4, // Allocate 4 vCPUs
-        teamId: process.env.VERCEL_TEAM_ID!,
-        projectId: process.env.VERCEL_PROJECT_ID!,
-        token: process.env.VERCEL_TOKEN!,
+        teamId: process.env.SANDBOX_VERCEL_TEAM_ID!,
+        projectId: process.env.SANDBOX_VERCEL_PROJECT_ID!,
+        token: process.env.SANDBOX_VERCEL_TOKEN!,
       }
     : {
         provider: "native",
