nav structure polish

--- a/agents-docs/content/docs/talk-to-your-agents/a2a.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/a2a.mdx
@@ -1,7 +1,7 @@
 ---
 title: Talk to your agent via A2A (JSON-RPC)
-sidebarTitle: Via A2A protocol
-description: Use the A2A JSON-RPC protocol to send messages to your agent and receive results, with optional streaming.
+sidebarTitle: Agent2Agent API
+description: Use the Agent2Agent JSON-RPC protocol to send messages to your agent and receive results, with optional streaming.
 icon: "LuNetwork"
 ---
 
