--- a/agents-docs/content/docs/talk-to-your-agents/chat-api.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/chat-api.mdx
@@ -1,8 +1,8 @@
 ---
-title: How to call your AI Agent via a Vercel AI SDK format API
-sidebarTitle: Via API
-description: Use a raw HTTP request to stream responses from your agent over the Vercel AI SDK data stream protocol.
-icon: LuNetwork
+title: How to call your AI Agent using the Chat API
+sidebarTitle: Chat API
+description: Learn about details of the Vercel AI SDK data stream protocol that powers the `/chat` API endpoint.
+icon: LuMessagesSquare
 keywords: API, Vercel AI SDK, streaming, SSE, data stream, agents, chat
 ---
 
@@ -11,7 +11,7 @@ keywords: API, Vercel AI SDK, streaming, SSE, data stream, agents, chat
 This guide shows how to call your agent directly over HTTP and stream responses using the Vercel AI SDK data stream format. It covers the exact endpoint, headers, request body, and the event stream response you should expect.
 
 <Tip>
-  If you are building a React UI, consider our prebuilt components under [React UI Components](/talk-to-your-agents/react/chat-button). This page is for low-level HTTP usage.
+  If you are building a React UI, consider our prebuilt components under [React UI Components](/talk-to-your-agents/react/chat-button) or [Vercel AI Elements](/talk-to-your-agents/vercel-ai-sdk/ai-elements) headless primatives. This page is for the low-level streaming API.
 </Tip>
 
 ## Endpoint
