--- a/agents-docs/content/docs/talk-to-your-agents/react/side-bar-chat.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/side-bar-chat.mdx
@@ -188,3 +188,5 @@ pnpm add @inkeep/agents-ui
 | `aiChatSettings`          | object | Configuration for the AI chat connection            |
 | `aiChatSettings.agentUrl` | string | The URL of your agent endpoint                |
 | `aiChatSettings.headers`  | object | Headers for authentication and agent identification |
+
+<Snippet file="ui/CustomizationTip.mdx" />
