--- a/agents-docs/_snippets/copy-trace.mdx
+++ b/agents-docs/_snippets/copy-trace.mdx
@@ -5,8 +5,7 @@ The `Copy Trace` button in the timeline view allows you to export the entire con
 <img
   src="/images/copy-trace.png"
   alt="Copy Trace button in the timeline view for exporting conversation traces"
-  width="100%"
-  style={{ borderRadius: "10px" }}
+  style={{ width: "100%", borderRadius: "10px" }}
 />
 
 #### What's Included in the Trace Export
