--- a/agents-docs/content/docs/typescript-sdk/cli-reference.mdx
+++ b/agents-docs/content/docs/typescript-sdk/cli-reference.mdx
@@ -422,29 +422,47 @@ inkeep config list
 
 ### `inkeep add`
 
-Pull a template project from the [Inkeep Agents Cookbook](https://github.com/inkeep/agents-cookbook/tree/main/template-projects).
+Pull a template project or MCP from the [Inkeep Agents Cookbook](https://github.com/inkeep/agents-cookbook).
 
 ```bash
-inkeep add [template]
+inkeep add [options]
 ```
 
 **Options:**
 
+- `--project <name>` - Add a project template
+- `--mcp <name>` - Add an MCP template
 - `--target-path <path>` - Target path to add the template to
 - `--config <path>` - Path to configuration file
 
 **Examples:**
 
 ```bash
-# Add a template
-inkeep add event-planner
+# List available templates (both project and MCP)
+inkeep add
 
-# Add template to specific path
-inkeep add event-planner --target-path ./src/templates
+# Add a project template
+inkeep add --project event-planner
+
+# Add project template to specific path
+inkeep add --project event-planner --target-path ./examples
+
+# Add an MCP template (auto-detects apps/mcp/app directory)
+inkeep add --mcp zendesk
+
+# Add MCP template to specific path
+inkeep add --mcp zendesk --target-path ./apps/mcp/app
 
 # Using specific config file
-inkeep add event-planner --config ./my-config.ts
+inkeep add --project event-planner --config ./my-config.ts
 ```
+
+**Behavior:**
+
+- When adding an MCP template without `--target-path`, the CLI automatically searches for an `apps/mcp/app` directory in your project
+- If no app directory is found, you'll be prompted to confirm whether to add to the current directory
+- Project templates are added to the current directory or specified `--target-path`
+- Model configurations are automatically injected based on available API keys in your environment (`ANTHROPIC_API_KEY`, `OPENAI_API_KEY`, or `GOOGLE_GENERATIVE_AI_API_KEY`)
 
 ### `inkeep update`
 
