docker improvements, and userpass

--- a/agents-docs/content/docs/self-hosting/gcp-compute-engine.mdx
+++ b/agents-docs/content/docs/self-hosting/gcp-compute-engine.mdx
@@ -140,6 +140,10 @@ PUBLIC_INKEEP_AGENTS_RUN_API_BYPASS_SECRET=<copy INKEEP_AGENTS_RUN_API_BYPASS_SE
 PUBLIC_NANGO_SERVER_URL=http://<vm_external_ip>:3050
 PUBLIC_NANGO_CONNECT_BASE_URL=http://<vm_external_ip>:3051
 PUBLIC_SIGNOZ_URL=http://<vm_external_ip>:3080
+
+# Modify these in production environments!
+INKEEP_AGENTS_MANAGE_UI_USERNAME=admin@example.com
+INKEEP_AGENTS_MANAGE_UI_PASSWORD=adminADMIN!@12
 ```
 
 Run with docker:
