--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -15,13 +15,13 @@ Inkeep Agents can operate as conversational assistants, for example:
 ## Agentic Workflows
 Agents can also be used for workflow automation like:
 - Creating and updating knowledge bases, documentation, and blogs
-- Updating CRMs, triaging helpdesk tickets, and streamlining repetitive tasks
+- Updating CRMs, triaging helpdesk tickets, and tackling repetitive tasks
 
 ## Two ways to build
 
 ### No-Code Visual Builder
 
-A no-code canvas designed to allow any team to create and manage teams of Agents with a drag-and-drop experience.
+A no-code canvas designed to allow any team to create and manage teams of Agents with an approachable drag-and-drop UI.
 
 <img
   src="/gifs/drag-n-drop.gif"
@@ -32,7 +32,7 @@ A no-code canvas designed to allow any team to create and manage teams of Agents
 
 ### TypeScript Agents SDK
 
-A code-first approach for building and managing multi-agent systems. Engineering teams to build with the tools and developer experience they expect.
+A code-first approach for building and managing multi-agent systems. Engineering teams can build with the tools and developer experience they expect.
 
    ```typescript
    import { agent, subAgent } from "@inkeep/agents-sdk";
