--- a/agents-docs/content/docs/self-hosting/docker-build.mdx
+++ b/agents-docs/content/docs/self-hosting/docker-build.mdx
@@ -1,5 +1,6 @@
 ---
 title: Build a Custom Docker Image
+sidebarTitle: Custom Image
 description: How to build your own docker images
 icon: "brand/DockerIcon"
 ---
