--- a/agents-docs/content/docs/self-hosting/gcp-cloud-run.mdx
+++ b/agents-docs/content/docs/self-hosting/gcp-cloud-run.mdx
@@ -1,5 +1,6 @@
 ---
 title: Deploy to GCP Cloud Run
+sidebarTitle: GCP Cloud Run
 description: Deploy to GCP Cloud Run with Docker Containers
 icon: "brand/DockerIcon"
 ---
