--- a/agents-docs/content/docs/self-hosting/gcp-compute-engine.mdx
+++ b/agents-docs/content/docs/self-hosting/gcp-compute-engine.mdx
@@ -1,5 +1,6 @@
 ---
 title: Deploy to GCP Compute Engine
+sidebarTitle: GCP Compute Engine
 description: Deploy to GCP Compute Engine with Docker Compose
 icon: "brand/DockerIcon"
 ---
