--- a/agents-docs/_snippets/copy-trace.mdx
+++ b/agents-docs/_snippets/copy-trace.mdx
@@ -4,8 +4,9 @@ The `Copy Trace` button in the timeline view allows you to export the entire con
 
 <img
   src="/images/copy-trace.png"
+  width=100%
   alt="Copy Trace button in the timeline view for exporting conversation traces"
-  style={{ width: "100%", borderRadius: "10px" }}
+  style={{ borderRadius: "10px" }}
 />
 
 #### What's Included in the Trace Export
