--- a/agents-docs/content/docs/get-started/traces.mdx
+++ b/agents-docs/content/docs/get-started/traces.mdx
@@ -130,7 +130,7 @@ When you visit `http://localhost:3080`, you can log in using the credentials you
 
 ### Step 4: Configure Environment Variables
 
-In your **root project directory** (of my-agent-directory), update your `.env` file:
+In your **root project directory** (e.g., `my-agent-directory`), update your `.env` file:
 
 ```bash
 # SigNoz Configuration
