--- a/agents-docs/content/docs/get-started/push-pull.mdx
+++ b/agents-docs/content/docs/get-started/push-pull.mdx
@@ -8,7 +8,7 @@ icon: "LuArrowLeftRight"
 
 With Inkeep, you can define your agents in code, push them to the Visual Builder, and continue developing with the intuitive drag-and-drop interface. You can switch back to code any time.
 
-Lets walk through the process.
+Let's walk through the process.
 
 ### Step 1: Install the Inkeep CLI
 
@@ -50,7 +50,7 @@ Use `inkeep push` to push the code to the Visual Builder.
 inkeep push
 ```
 
-### Step 5: Chat with your agent
+### Step 4: Chat with your agent
 
 Refresh http://localhost:3000, switch to the **Docs Assistant** project (in the bottom left).
 
@@ -58,14 +58,12 @@ Under **Agents**, click on the Docs Assistant agent and press **Try it**. Ask a 
 
 <img src="/gifs/docs-assistant.gif" alt="Chat with your agent" width="100%" style={{ borderRadius: "10px" }} />
 
+## Run `inkeep pull`
 
-
-## Pull code from visual
-
-Make some changes, like changing a prompt, and lets walk through `inkeep pull`. The `inkeep pull` command uses AI to sync your TypeScript files to the state of your Visual Builder.
+Make some changes, like changing a prompt, and let's walk through `inkeep pull`. The `inkeep pull` command uses AI to sync your TypeScript files to the state of your Visual Builder.
 
 <Note>
-**Prerequisites:** urrently, we currently only support Anthropic. Support for other providers will be coming soon.
+**Prerequisites:** Currently, we only support Anthropic. Support for other providers will be coming soon.
 
 If you don't already have an ANTHROPIC_API_KEY, you can get one from the [Anthropic Console](https://console.anthropic.com/).
 
