--- a/agents-docs/content/docs/self-hosting/add-other-services/sentry.mdx
+++ b/agents-docs/content/docs/self-hosting/add-other-services/sentry.mdx
@@ -1,7 +1,7 @@
 ---
 title: Sentry
 sidebarTitle: Add Sentry
-description: Add sentry monitoring to your agent services
+description: Add Sentry monitoring to your agent services
 icon: "brand/SentryIcon"
 keywords: Sentry, error tracking, monitoring, distributed tracing
 ---
@@ -79,5 +79,5 @@ logger.addTransport({
 });
 ```
 
-## Addition Resources
-For more information on how to configure your Sentry you can consult the official Sentry Node.js [documentation](https://docs.sentry.io/platforms/node/).
+## Additional Resources
+For more information on how to configure Sentry, you can consult the official Sentry Node.js [documentation](https://docs.sentry.io/platforms/node/).
