--- a/agents-docs/content/docs/self-hosting/docker-local.mdx
+++ b/agents-docs/content/docs/self-hosting/docker-local.mdx
@@ -36,7 +36,7 @@ This may take up to 5 minutes to start.
 ### Retrieve your SigNoz and Nango API Keys
 
 To get your SigNoz API key `SIGNOZ_API_KEY`:
-- Open SigNoz in a browser at `http//localhost:3080`
+- Open SigNoz in a browser at `http://localhost:3080`
 - Navigate to Settings → Account Settings → API Keys → New Key
 - Choose a role, Viewer is sufficient for observability
 - Set the expiration field to "No Expiry" to prevent the key from expiring
