--- a/agents-docs/content/docs/self-hosting/vercel.mdx
+++ b/agents-docs/content/docs/self-hosting/vercel.mdx
@@ -8,7 +8,7 @@ icon: "brand/VercelIcon"
 
 ### Step 1: Create a GitHub repository for your project
 
-If you do not have an Inkeep project already, [follow these steps](/quick-start/start-development) to create one. Then push your project to a reposistory on GitHub.
+If you do not have an Inkeep project already, [follow these steps](/quick-start/start-development) to create one. Then push your project to a repository on GitHub.
 
 ### Step 2: Create a Turso Database
 
