migrate to nango mcp generic

--- a/agents-docs/content/docs/typescript-sdk/tools/credentials.mdx
+++ b/agents-docs/content/docs/typescript-sdk/tools/credentials.mdx
@@ -147,7 +147,7 @@ You can also define credentials in your environment files:
   </Tab>
 
   <Tab title="Development Config">
-    ```typescript title="environments/development.ts"
+    ```typescript title="environments/development.env.ts"
     import { registerEnvironmentSettings } from '@inkeep/agents-sdk';
     import { CredentialStoreType } from '@inkeep/agents-core';
 
@@ -167,7 +167,7 @@ You can also define credentials in your environment files:
   </Tab>
 
   <Tab title="Production Config">
-    ```typescript title="environments/production.ts"
+    ```typescript title="environments/production.env.ts"
     import { registerEnvironmentSettings } from '@inkeep/agents-sdk';
     import { CredentialStoreType } from '@inkeep/agents-core';
 
