--- a/agents-docs/content/docs/self-hosting/docker-local.mdx
+++ b/agents-docs/content/docs/self-hosting/docker-local.mdx
@@ -76,6 +76,10 @@ NANGO_SECRET_KEY=
 
 # SigNoz
 SIGNOZ_API_KEY=
+
+# Default username and password for Manage UI (http://localhost:3000)
+# INKEEP_AGENTS_MANAGE_UI_USERNAME=admin@example.com
+# INKEEP_AGENTS_MANAGE_UI_PASSWORD=adminADMIN!@12
 ```
 
 Run with docker:
@@ -83,7 +87,7 @@ Run with docker:
 docker compose up -d
 ```
 
-Then open `http://localhost:3000` in a browser!
+Then open http://localhost:3000 in a browser!
 
 - Manage UI (http://localhost:3000)
 - Manage API Docs (http://localhost:3002/docs)
