--- a/agents-docs/content/docs/get-started/traces.mdx
+++ b/agents-docs/content/docs/get-started/traces.mdx
@@ -115,7 +115,7 @@ This will start:
 - SigNoz OTEL collector
 - ClickHouse database
 
-When you visit `http://localhost:3080`, you can log in using the credentials you configured above.
+When you visit `http://localhost:3080`, you can sign up with your desired credentials.
 
 ### Step 3: Configure Environment Variables
 
