improve credential icons

--- a/agents-docs/content/docs/typescript-sdk/tools/credentials.mdx
+++ b/agents-docs/content/docs/typescript-sdk/tools/credentials.mdx
@@ -106,10 +106,10 @@ retrievalParams: {
 ``` typescript
 // OAuth2.1/PKCE flow
 retrievalParams: {
-  "connectionId": "oauth_token_<toolId>", // where <toolId> is the id of the MCP tool the credential is associated with
-  "providerConfigKey": "oauth_token_<toolId>",
-  "provider": "private-api-bearer",
-  "authMode": "API_KEY"
+  "connectionId": "<nango-connection-id>", // Nango connection ID that was generated. You can confirm this in your nango dashboard (cloud or self-hosted)
+  "providerConfigKey": "<mcp-server-name>_<mcp-server-generated-id>", // For example, linear_AABBCC1234
+  "provider": "mcp-generic",
+  "authMode": "OAUTH2"
 }
 
 // Bearer authentication 
